--- a/00-Python Object and Data Structure Basics/01-Numbers.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Numbers.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numbers and more in Python!\n",
+    "# Numbers and more in Python!!!\n",
     "\n",
     "In this lecture, we will learn about numbers in Python and how to use them.\n",
     "\n",
